--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -787,8 +787,9 @@ Returning to my own findings, one of the motivational factors guiding the evolut
 For many, this fluency incorporated improvisational characteristics. Clive (p) quickly added a player health boost after a level, following feedback during playtesting. Tehillah’s bonus level idea appeared to emerge spontaneously (Vignette 2). Pairs often adopted a similar spirit of improvisation. For example, parent Dan suggests (Vignette 6), “Use paper to design?”, to which Toby replies, “I’m just going with it.” In exploring sound-making software (Vignette 3), Ed and Mark engage in tinkering and experimentation, which spurs creativity. Their joint improvisation leads to two different soundtracks and a proposal to use different soundtracks for different levels.
 
 The learning design’s emphasis on repeated implementation of GDPs appears to align with an iterative design thinking approach. However, participant behaviour did not align with linear design cycle frameworks advocated in constructionist research [@resnick_all_2007; @winarno_steps_2020-1; @dam_5_2024]. The stages were often fragmented or occurred in parallel. Video data includes many examples of improvisational approaches that combine ideation, planning, implementation, and testing in rapid succession. Using Mark’s phrase from Vignette 3, for many, the process was far from systematic—more a responsive “jumping around.”
+While not supported by systematic data analysis, the findings of this chapter suggest a relationship between the fluid, expressive and improvisational behaviour described and the supporting resources which allowed choice over learner pathway, specifically which GDPs to implement and in which order. Certainly, this adaptation aligns with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016]. Thus, as a contribution to CGD&P research, my findings extending Basawapatna and colleagues [-[@basawapatna_zones_2013] approach to support flow via just in time documentation aligned with participants goal to support participant engagement, by providing  mechanisms, structured around a curated set of GDPs and a stage-based development. The findings of the chapter also offer an alternative to the graceful flow of represented in the creative design spiral (and similar representations design cycles), positioning practice for many as more responsive, messy, and productively chaotic process [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic].
 
-While not supported by systematic data analysis, the findings of this chapter suggest a relationship between the fluid, expressive, and improvisational behaviour described and the supporting resources that enabled choice over learner pathways—specifically, which GDPs to implement and in what order. This adaptation aligns with research on the interdependence of flow experience and opportunities for social identity development [@mao_optimal_2016]. As a contribution to CGD&P research, my findings extend Basawapatna and colleagues’ [-@basawapatna_zones_2013] approach to supporting flow through just-in-time documentation aligned to participants’ goals. In this study, mechanisms were structured around a curated set of GDPs and a stage-based development process. The findings also offer an alternative to the graceful flow represented in the creative design spiral (and similar design cycle models), instead positioning practice as a more responsive, messy, and productively chaotic process [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic].
+While not supported by systematic data analysis, the findings of this chapter suggest a relationship between the fluid, expressive and improvisational behaviour described and the supporting resources which allowed choice over learner pathway, specifically which GDPs to implement and in which order. Certainly, this adaptation aligns with research on the interdependence of flow experience and possibilities for social identity development [@mao_optimal_2016]. Thus, as a contribution to CGD&P research, my findings extending Basawapatna and colleagues [-[@basawapatna_zones_2013] approach to support flow via just in time documentation aligned with participants goal to support participant engagement, by providing  mechanisms, structured around a curated set of GDPs and a stage-based development. The findings of the chapter also offer an alternative to the graceful flow of represented in the creative design spiral (and similar representations design cycles), positioning practice for many as more responsive, messy, and productively chaotic process [@biffi_chasing_2017-1; @de_freitas_classroom_2012; @cormier2008rhizomatic].
 
 Most specifically, the diverse mediational and motivational strategies described in this chapter extend existing studies on the use of GDPs within educational contexts for young people. While Chapter 2 described one study that addressed some aspects of GDP use in a game co-design process [@eriksson_using_2019], it provided limited detail and focused primarily on GDPs as a tool for researchers—as a lingua franca and to structure analytical framing. My study gives greater attention to participant use of GDPs, particularly their importation from other contexts, transformation within the developing idioculture of the game-making context, and the resulting variety of uses. This extends this line of research significantly.
 
