final bit of ch. 7

--- a/_posts/thesis_chapters/2025-7-5-Design_v18.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v18.md
@@ -451,7 +451,7 @@ In summer 2020, I began early dissemination of results in a peer-reviewed book [
 | Free choice of Patterns increases learner engagement and ownership   | Tracing the learner pathway on an attractive physical map in the learning space can help integrate navigation and reflection into the creative process | Drama and fictional scenarios can help explore issues and reduce learner anxiety through coding in a role          |
 | Restrict game type and number of Patterns to reduce facilitator stress       |                      | Adding electronics to control the game via arcade buttons and cabinets increases engagement and perceptions of project authenticity |
 | Limit complexity of patterns. Some are simple but cause a large change in the game       |    |        |
-| Side missions which explore and celebrate different ‘maker types’ (from Bartle’s player types)          |        |     |
+| Side missions which explore and celebrate different approaches to making ( based on from Bartle’s player types [@schneider_analysis_2016])          |        |     |
 
 Table 5.x – Key features of the 3M Game Making Model
 
