--- a/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-7-6-Gdps_v6.md
@@ -741,16 +741,17 @@ Other characteristics and norms of the emerging idioculture stemming which stem 
 
  Chapter 5, via a design narrative of the pedagogical design used, highlighted tensions where existing mediational strategies or tools were insufficient, and thus innovative forms of mediation were needed. This chapter has offered further analysis of activity by focusing on the germ cell concept of GDPs used in a variety of ways, a summary of which has been represented in table form at the start of this chapter. GDPs are used in diverse ways by participants, peers and facilitators, as either principle or supporting parts of mediational strategies, including as a shared language, as a motivational element, or as a way of structuring the learning experience and supporting resources. A summary of the diverse uses of GDPs is included within Table 6.x.
 
- | **GDP usage in game making**               | **Description (using CHAT concepts)**                                 |
- | ------------------------------------------ | --------------------------------------------------------------------- |
- | Personal appropriation                    | GDPs used in appropriation of personal knowledge                     |
- | Guided participation / interpersonal focus | GDPs as a framework for supporting resources and navigation          |
- |                                            | GDPs used to scaffold ideation and prioritisation processes          |
- |                                            | GDPs used to aid the process of division of labour                   |
- | Cultural activity focus                    | GDPs can encourage learners to design for others                     |
- |                                            | GDPs facilitate the use of wider repertoires of practice and funds of knowledge |
- |                                            | GDPs are propagated through the community through playtesting        |
- |                                            | GDPs as components of emerging repertoires in an evolving idioculture |
+ | **Category**                                   | **Use of GDPs**                                               | **Description**                                                                                                                    |
+ | ---------------------------------------------- | ------------------------------------------------------------- | ---------------------------------------------------------------------------------------------------------------------------------- |
+ | **Personal appropriation**                     | Appropriation of personal knowledge                           | GDPs supported participants in exploring their own ideas, surfacing computational, design, and systems concepts embedded in games. |
+ |                                                | Fluid design operations                                       | The structure and modularity of GDPs facilitated iterative processes such as rapid prototyping, code patching, and debugging.      |
+ | **Guided participation / interpersonal focus** | Framework for supporting resources and navigation             | A restricted set of GDPs was used to organise tutorials, documentation, and menus, supporting flexible learner pathways.           |
+ |                                                | Scaffolding ideation and prioritisation                       | GDP concepts were used as shorthand in idea generation, planning, and decision-making during project work.                         |
+ |                                                | Supporting division of labour                                 | GDPs acted as a shared language that allowed participants to split tasks, coordinate roles, and build specialisms.                 |
+ | **Cultural activity focus**                    | Designing for others                                          | The impact of GDP implementation helped participants imagine and respond to player experiences and feedback.                       |
+ |                                                | Facilitating the use of home repertoires and interests        | GDPs provided a way to incorporate personal, cultural, and home-based practices into game narratives and assets.                   |
+ |                                                | Propagation through playtesting                               | Novel or effective GDP implementations spread between participants through peer interaction.                                       |
+ |                                                | Components of emerging repertoires in an evolving idioculture | Repeated use and adaptation of GDPs contributed to a shared culture of design practice.                                            |
 
  Table 6.x: Summary of varied GDP use within the activity of this research
 
