--- a/_posts/thesis_chapters/2025-7-5-Design_v18.md
+++ b/_posts/thesis_chapters/2025-7-5-Design_v18.md
@@ -622,7 +622,7 @@ Gilbert is the worsted name.
 [^36a]: Side missions or side quests are a concept from video games involving exploration. They complement main missions and offer greater choice over player experience.
 
 
-[^36]: The drama narrative builds on work of Rebecca Patternson, Alison and myself [@patterson ]. It
+[^36]: The drama narrative builds on existing work of Rebecca Patterson, Alison and myself [caldwell_drama_2019] involving a process of _coding in role_, which extends better know idea of writing within a dramatic role. 
 
 [^37]:   The term map of learning dimensions . The map includes: computational thinking, systems thinking, computing concepts and practices. In Chapter 6, I present a framework of concepts.
 
