--- a/_posts/thesis_chapters/tocs/2025-7-6-Gdps_v6.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-7-6-Gdps_v6.md_toc.md
@@ -26,6 +26,8 @@
             practice, interest and funds of
             knowledge](#gdps-can-facilitate-the-use-of-wider-repertoires-of-practice-interest-and-funds-of-knowledge)
     -   [Discussion](#discussion)
+        -   [Gameplay design patterns as mediating cultural
+            resources](#gameplay-design-patterns-as-mediating-cultural-resources)
         -   [Developing flexible fluency](#developing-flexible-fluency)
     -   [Conclusion](#conclusion)
     -   [Footnotes](#footnotes)
