css goldmark test

--- a/_posts/thesis_chapters/2025-07-00-Front.md
+++ b/_posts/thesis_chapters/2025-07-00-Front.md
@@ -17,7 +17,7 @@ title: Front Mattter
 
 A thesis submitted in partial fulfilment of the  requirements of Manchester Metropolitan University  for the degree of Doctor of Philosophy  Education and Social Research Institute  Manchester Metropolitan University
 
-::: {custom-style="FrontMatterHeading"}
+::: {custom-style="FrontMatterHeading" .frontmatter}
 Abstract
 :::
 
