back to doc focus workflow - may break web pages

--- a/_posts/thesis_chapters/2025-07-06-Gdps_v6.md
+++ b/_posts/thesis_chapters/2025-07-06-Gdps_v6.md
@@ -139,14 +139,16 @@ Acknowledging the broad coverage of existing research covering this aspect of CG
 
 Addressing digital and web literacies first, to integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop foundational digital skills related to using a desktop personal computer and use of internet browser and online tool ( see Chapter 1 and  Appendix C.dliteracy). The the following vignette extract features a mother Madiha and daughter Nasrin [^v5].
 
-    Madiha has just finished created a pixel art sprite of an alien and comment, "We’re finished. Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there don’t I? Without losing it I’ll be very upset." Madiha's emotional investment in her creative prompts Sonia, a fellow parent, to comment: "Have you saved it?" Unsure of how to transfer the image from the online image editor the glitch coding environment, Madiha seeks assistance from her daughter:   
+::: {.vignette lo-style="vignette"}
+Madiha has just finished created a pixel art sprite of an alien and comment, "We’re finished. Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there don’t I? Without losing it I’ll be very upset." Madiha's emotional investment in her creative prompts Sonia, a fellow parent, to comment: "Have you saved it?" Unsure of how to transfer the image from the online image editor the glitch coding environment, Madiha seeks assistance from her daughter:   
 
-    Madiha: Nasrin! Nasrin! Nasrin! Do you know how to get it in the game?
-    Nasrin: Oh my god!
-    Madiha: Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved? Right now export it.
-    Nasrin: Do you even know what export means?
-    Madiha: I know what export means!
-    Nasrin: Ok then, smarty-pants.
+Madiha: Nasrin! Nasrin! Nasrin! Do you know how to get it in the game?
+Nasrin: Oh my god!
+Madiha: Well . First of all save it to the gallery. How do you save it? Ah there you are. Save it. Is it saved? Right now export it.
+Nasrin: Do you even know what export means?
+Madiha: I know what export means!
+Nasrin: Ok then, smarty-pants.
+:::
 
 <!-- In another example, changing pen colours in the graphical tool is a process that Nasrin(c) has already internalised and performs effortlessly, whereas Madiha(p) is still deliberately working to build her competency. Nasrin(p) has fully operationalised the process, incorporating it into her repertoire of practices. -->
 ### The role of GDPs in the personal appropriation of concepts and processes
@@ -163,6 +165,7 @@ Acknowledging the broad coverage of existing research covering this aspect of CG
 
 Addressing digital and web literacies first, to integrate new gameplay design patterns or adapt existing ones in their games, participants needed to develop foundational digital skills related to using a desktop personal computer and use of internet browser and online tool ( see Chapter 1 and  Appendix C.dliteracy). The the following vignette extract features a mother Madiha and daughter Nasrin [^v5].
 
+::: {.vignette lo-style="vignette"}
     Madiha has just finished created a pixel art sprite of an alien and comment, "We’re finished. Right what’s next? Now I’m an expert pixel? Now I have to figure out how to get it in there don’t I? Without losing it I’ll be very upset." Madiha's emotional investment in her creative prompts Sonia, a fellow parent, to comment: "Have you saved it?" Unsure of how to transfer the image from the online image editor the glitch coding environment, Madiha seeks assistance from her daughter:   
 
     Madiha: Nasrin! Nasrin! Nasrin! Do you know how to get it in the game?
@@ -171,6 +174,7 @@ Addressing digital and web literacies first, to integrate new gameplay design pa
     Nasrin: Do you even know what export means?
     Madiha: I know what export means!
     Nasrin: Ok then, smarty-pants.
+:::
 
 The implementation by Madiha of the GDP of adding a new hazard element into her game drives the development of these technical processes, and facilitates a process of accessing help to do so. Thus, in this process, GDPs functioned as both motivational and conceptual tools facilitating the application of technical processes. More broadly, video data showed, participants developing fluency in areas such as browser tab use, creating, uploading, and integrating graphical and audio assets, and proficiency in keyboard and mouse use for text manipulation [^op].
 
